--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/blogs?createTableIfNotExists=true
+spring.datasource.url=jdbc:mysql://localhost:3306/lms_rocks?createTableIfNotExists=true
+
+#Set your login credentials here
 spring.datasource.username=root
-spring.datasource.password=Kan@2911
+spring.datasource.password=sriram@123
+
+
+#We are writing this thing for hibernate
 spring.jpa.hibernate.ddl-auto=update
-logging.level.org.springframework=debug
+#It means if the Entity has been modified :---> update the SQL table also
+
+
+
+server.port=10000
